todo list header form created

--- a/index.html
+++ b/index.html
@@ -7,3 +7,14 @@
     <title>Todo List 2022</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+    <header>
+                <h1>Task List 2022</h1>
+                <form id="new-task-form">
+                    <input type="text" id="new-task-input"
+                     placeholder="What do you have planned? ">
+                     <input type="submit" id="new-task-submit" value="Add task">
+                </form>
+    </header>
+    
