--- a/index.html
+++ b/index.html
@@ -17,4 +17,7 @@
                      <input type="submit" id="new-task-submit" value="Add task">
                 </form>
     </header>
-    
+    <main>
+
+        <section class="task-list">
+                 <h2>Tasks</h2>
