--- a/index.html
+++ b/index.html
@@ -21,3 +21,25 @@
 
         <section class="task-list">
                  <h2>Tasks</h2>
+                 <div id="tasks">
+
+                    <!-- <div class="task">
+                         <div class="content">
+                             <input type="text" class="text" 
+                             value="My shiny task" readonly>
+                         </div>
+                             <div class="actions">
+                                 <button class="edit">Edit</button>
+                                 <button class="delete">Delete</button>
+                             </div>
+
+                    </div>
+                  
+               
+
+            </div> -->
+               </div>
+      </section>
+
+ </main>
+ 
